Enemy waving and rotation issues